--- a/Shop/src/main/webapp/resources/common/reset.css
+++ b/Shop/src/main/webapp/resources/common/reset.css
@@ -1,10 +1,11 @@
 @charset "UTF-8";
 
+
 @font-face {
-     font-family: 'S-CoreDream-5Medium';
-     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-5Medium.woff') format('woff');
-     font-weight: normal;
-     font-style: normal;
+    font-family: '양진체';
+    src: url('https://cdn.jsdelivr.net/gh/supernovice-lab/font@0.9/yangjin.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
 }
 
 html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,
@@ -51,9 +52,7 @@ a {
   text-decoration: none;
 }
 
-
-	
-
+   
 
 
 
